# heccer

./: .gitignore  .mtn-ignore  Makefile.am  Makefile.in  NOTES  TODO.txt  aclocal.m4  addressing.c  addressing.h  autogen.sh  build-dist  callout.h  compartment.c  compartment.h  config.h.in  config.status.lineno  configure  configure.ac  configure.lineno  configure.scan  des.c  dist-build  doxygen.cfg  event.c  eventdistributor.c  generate-release-version  generate-release-version.ptkdb  heccer.c  heccer.dxgen  heccer.h  heccer.i  heccer_test.pm  indexers.c  indexers.h  intermediary.c  intermediary.h  make_check  mathcomponent.c  mathcomponent.h  mcad2doxy  (+19 more)
docs/: HOWTO.outline  comments.txt  external-use.txt
glue/: Makefile.am  Makefile.in  configure.ac
glue/perl/: cbc  cbc.c  simple
glue/swig/perl/: .gdbinit  Heccer.pm  Makefile.am  Makefile.in  configure  configure.ac  heccer.i  heccer_test.pm
glue/swig/python/: Makefile.am  Makefile.in  configure  configure.ac  des.i  heccer.i  heccer_1.i  setup.py  uninstall.py
glue/swig/python/Heccer/: __init__.py
glue/swig/python/heccer/: __cbi__.py  __init__.py  des.py  errors.py  heccer.py
glue/swig/python/neurospaces/heccer/: __cbi__.py  __init__.py
glue/swig/python/tests/: heccer_test.py
glue/swig/python_old/: Makefile.am  SwiggableHeccer.py  swiggable_heccer_wrap.c
glue/swig/python_old/heccer/: __init__.py
heccer/: addressing.h  callout.h  compartment.h  config.h.in  des.h  event.h  eventdistributor.h  heccer.h  indexers.h  intermediary.h  mathcomponent.h  mechanism.h  minimumdegree.h  output.h  perfectclamp.h  pulsegen.h  random.h  serialization.h  service.h  table.h  vclamp.h  vm.h
install/: release.yml
install/deb/: changelog  control  rules
install/osx/PackageMaker.pmdoc/: 01package-contents.xml  01package.xml  index.xml
install/osx/Resources/: Welcome.rtf
install/rpm/: heccer.spec
integrators/: Makefile.am  Makefile.in
integrators/heccer/neurospaces/: connections.c  connections.h  des.c  des.h  des2.c  heccer.c  heccer.h  mechanisms.c  mechanisms.h  neurospaces.c  segments.c  segments.h
tests/: Makefile.am  Makefile.in  introduction.html  neurospaces_harness  run  run.ptkdb  tests.config  tests_2_html  tests_2_html.ptkdb
tests/code/: .gdbinit  Makefile.am  Makefile.in  addressing-aggregator1.c  addressing-current.c  addressing-purk-test-axon.c  addressing-purk-test-segment.c  addressing-synchan.c  aggregator-kc-feedback.c  aggregator-kc.c  c1c2p1.c  c1c2p2.c  callout1.c  calloutInjector.c  channel1-nernst1.c  channel2-nernst1.c  channel2-nernst2.c  check-compartment.c  config.h.in  configure  configure.ac  configure.scan  doublea-aggregator.c  doublep.c  fork3p.c  fork4p1.c  fork4p2.c  fork4p3.c  hh1.c  main-serializer.c  main-serializer.h  main.c  main.h  perfectclamp-passive1.c  perfectclamp-passive10-2.c  perfectclamp-passive10.c  pool-feedback.c  pool-feedback1.c  pool-feedback2.c  pool1-contributors2.c  (+57 more)
tests/genesis/: .gdbinit  Makefile.am  Makefile.in  c1c2p2.g  pool-feedback.g  pool1-nernst.g  pool1.g  pool2.g  pulsegen.g  singlea-naf.g  springmass.g  table-cat.g  table-ka.g  table-kh.g  table-naf.g  tensizesp.g  vclamp-passive.g
tests/genesis/hopital/: cell_minhh.p  channels_minhh.g  minhh.g  protodefs_minhh.g
tests/glue/: Makefile.am  Makefile.in  tests.config
tests/glue/perl/: c1c2p1  c1c2p2  doublep  fork3p  fork4p1  fork4p2  fork4p3  singlep  tensizesp  triplep
tests/glue/swig/perl/: c1c2p1  c1c2p2  callout1  doublep  fork3p  fork4p1  fork4p2  fork4p3  main  pool1  pool1-feedback1  pool1-feedback2  pool1-feedback2.ptkdb  pool1.ptkdb  pool2  singlep  singlep.ptkdb  table-ka  table-ka.ptkdb  table-naf  table-naf.ptkdb  tensizesp  triplep
tests/glue/swig/perl/active/: singlea-naf  singlea-naf.ptkdb
tests/python/: c1c2.py  c1c2p1.py  getversion.py  import_test.py  import_test_1.py  options.py  perfectclamp-passive1.py  perfectclamp-passive10.py  spiker1.py  test_library.py
tests/specifications/: addressing.t  callout.t  checks.t  options.t  passive.t  perfectclamp.t  pools.t  pulsegen.t  serialization.t  spikes.t  synaptic.t  table-sharing.t  tables.t  vclamp.t  version.t
tests/specifications/active/: hh.t  singles.t
tests/specifications/glue/swig/perl/: passive.t  pools.t  tables.t
tests/specifications/glue/swig/perl/active/: singles.t
tests/specifications/python/: import.t  perfectclamp.t  pypassive.t  pyversion.t
tests/specifications/strings/: addressing-aggregator1.txt  addressing-current.txt  addressing-purk-test-axon--with-neurospaces.txt  addressing-purk-test-axon--without-neurospaces.txt  addressing-purk-test-axon.txt  addressing-purk-test-segment--with-neurospaces.txt  addressing-purk-test-segment--without-neurospaces.txt  aggregator-kc-feedback.txt  aggregator-kc.txt  c1c2p1.txt  c1c2p2.txt  channel1-nernst1.txt  channel2-nernst1.txt  channel2-nernst2.txt  check-compartment.txt  doublea-aggregator.txt  doublep.txt  fork3p.txt  fork4p1.txt  fork4p2.txt  fork4p3.txt  hh1.txt  perfectclamp-passive1.txt  perfectclamp-passive10-2.txt  perfectclamp-passive10.txt  perfectclamp10-2.txt  perfectclamp10.txt  pool1-contributors2.txt  pool1-feedback1.txt  pool1-feedback2.txt  pool1-nernst.txt  pool1.txt  pool2.txt  pulse0.txt  pulse1.txt  pulse2.txt  serialization-c1c2p1.txt  serialization-c1c2p2.txt  serialization-channel2-nernst2.txt  serialization-doublep.txt  (+38 more)
tests/specifications/strings/active/: hh1.txt  singlea-naf.txt
tests/specifications/strings/python/: perfectclamp-passive1.txt  perfectclamp-passive10.txt
