dnl
dnl Heccer : a compartmental solver that implements efficient Crank-Nicolson
dnl integration for neuronal models.
dnl

dnl //////////////////////////////////////////////////////////////////////////
dnl 
dnl Heccer : testbed C implementation
dnl 
dnl Copyright (C) 2006-2008 Hugo Cornelis
dnl 
dnl functional ideas ..	Hugo Cornelis, hugo.cornelis@gmail.com
dnl 
dnl coding ............	Hugo Cornelis, hugo.cornelis@gmail.com
dnl 
dnl //////////////////////////////////////////////////////////////////////////

# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)

# $Format: "AC_INIT(${package}, ${major}.${minor}.${micro}-${label}, ${email})"$
AC_INIT(heccer, 0.0.0-alpha, hugo.cornelis@gmail.com)

dnl Obtain operating system information.
AC_CANONICAL_TARGET

AC_CONFIG_SRCDIR([compartment.c])
AC_CONFIG_HEADER([heccer/config.h])

dnl dnl all subdirs

dnl AC_CONFIG_SUBDIRS(tests/code glue)

# $Format: "AM_INIT_AUTOMAKE(${package}, ${major}.${minor}.${micro}-${label})"$
AM_INIT_AUTOMAKE(heccer, 0.0.0-alpha)


# Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB

AC_PATH_PROGS(DOXYGEN,doxygen)
AC_PATH_PROGS(DOT,dot)
AC_PATH_PROGS(SOURCE_HIGHLIGHT,source-highlight)


dnl Check for Python and it's headers
AM_PATH_PYTHON(,[],[
   echo "Python is not installed."
   exit -1
])

AC_MSG_CHECKING([Python prefix is ])
  AC_MSG_RESULT(['$PYTHON_PREFIX'])

dnl
dnl This is a forced fix to make sure a mac installation gets the proper
dnl python executable. Unless the macpython installer was run, the autotools
dnl python macro won't look for python in the proper path. 
dnl 
case "$host_os" in
  darwin*)

    PYTHON_PREFIX='/Library/Frameworks/Python.framework/Versions/Current'
    AC_SUBST(PYTHON_PREFIX)
    
    PYTHON=$PYTHON_PREFIX/bin/python
    AC_SUBST(PYTHON)

    AC_CHECK_PROG(HAVE_PYTHON_CONFIG, python-config, "yes", "no",[$PYTHON_PREFIX/bin])
    AC_MSG_CHECKING([python-config present])
    AC_MSG_RESULT([$HAVE_PYTHON_CONFIG])
  ;;
  *)

    AC_CHECK_PROG(HAVE_PYTHON_CONFIG, python-config, "yes", "no")
    AC_MSG_CHECKING([python-config present])
    AC_MSG_RESULT([$HAVE_PYTHON_CONFIG])

  ;;
esac


if test "$HAVE_PYTHON_CONFIG" == "yes"; then

  # This is to set the proper python-config for getting the 
  # proper flags and prefixes

  
  AC_MSG_CHECKING([Python config location])
  PYTHON_CONFIG=$PYTHON-config
  AC_SUBST(PYTHON_CONFIG)
  AC_MSG_RESULT([$PYTHON_CONFIG])


  AC_MSG_CHECKING([Python prefix is])
  PYTHON_PREFIX=`$PYTHON_CONFIG --prefix`
  AC_SUBST(PYTHON_PREFIX)
  AC_MSG_RESULT([$PYTHON_PREFIX])


  AC_MSG_CHECKING([Python includes are])
  PYTHON_INCLUDE=`$PYTHON_CONFIG --include`
  AC_SUBST(PYTHON_INCLUDE)
  AC_MSG_RESULT([$PYTHON_INCLUDE])


  AC_MSG_CHECKING([Python libs are])
  PYTHON_LIBS=`$PYTHON_CONFIG --libs`
  AC_SUBST(PYTHON_LIBS)
  AC_MSG_RESULT([$PYTHON_LIBS])


  AC_MSG_CHECKING([Python cflags are])
  PYTHON_CFLAGS=`$PYTHON_CONFIG --cflags`
  AC_SUBST(PYTHON_CFLAGS)
  AC_MSG_RESULT([$PYTHON_CFLAGS])


  AC_MSG_CHECKING([Python ldflags are])
  PYTHON_LDFLAGS=`$PYTHON_CONFIG --ldflags`
  AC_SUBST(PYTHON_LDFLAGS)
  AC_MSG_RESULT([$PYTHON_LDFLAGS])

  AC_MSG_CHECKING([Python executable is])
  PYTHON_EXE=$PYTHON_PREFIX/bin/python
  AC_SUBST(PYTHON_EXE)
  AC_MSG_RESULT([$PYTHON_EXE])


else

  # This is legacy to make sure that systems with python
  # that do not have python-config can get the python info
  # This has always been a bit error prone, particularly if the 
  # user has more than one python version installed.

  PYTHON_PREFIX=`echo $PYTHON | sed -e "s,[[^/]]*$,,;s,/$,,;s,^$,.,"`
  PYTHON_PREFIX=`echo $PYTHON_PREFIX | sed -e "s,[[^/]]*$,,;s,/$,,;s,^$,.,"`
  AC_SUBST(PYTHON_PREFIX)

  AC_MSG_CHECKING([Python prefix is])
  AC_MSG_RESULT([$PYTHON_PREFIX])

  PYTHON_HEADERS='$(PYTHON_PREFIX)/include/python$(PYTHON_VERSION)'
  AC_SUBST(PYTHON_HEADERS)

  AC_MSG_CHECKING([Python includes are])
  PYTHON_INCLUDE='-I$(PYTHON_HEADERS)'
  AC_SUBST(PYTHON_INCLUDE)
  AC_MSG_RESULT([$PYTHON_INCLUDE])

  AC_MSG_CHECKING([Python ldflags are])
  PYTHON_LIBS='-L$(pyexecdir)/../config'
  AC_SUBST(PYTHON_LIBS)
  AC_MSG_RESULT([$PYTHON_LIBS])
				
  PYTHON_EXE='$(PYTHON_PREFIX)/bin/python'
  AC_SUBST(PYTHON_EXE)
fi








# Checks for options

AC_ARG_ENABLE(random, AS_HELP_STRING([--with-random   use the builtin random number generator (recommended not to use the builtin)]) )
if test x"$with_random" == "xyes" ; then

    echo "USING THE BUILTIN RANDOM NUMBER GENERATOR (recommended not to use the builtin)"

    AC_DEFINE(RANDOM, (RAND_MAX * ran1(0)), [use the numerical recipes ran1() random number generator (not recommended)])

else

    echo "not using the builtin random number generator (recommended not to use the builtin)"

    AC_DEFINE(RANDOM, random(), [use the 4.3BSD random() random number generator])

fi

AC_ARG_ENABLE(sglib, AS_HELP_STRING([--with-sglib   use the sglib based event queue]) )
if test x"$with_sglib" == "xyes" ; then

    echo "using the sglib based event queue"

    AC_DEFINE(USE_SGLIB, 1, [use the sglib based event queue])

else

    echo "not using the sglib based event queue"

    AC_DEFINE(USE_SGLIB, 0, [use the builtin event queue])

fi

AC_ARG_ENABLE(random, AS_HELP_STRING([--with-id-disassem   output serial ids of compartments in the disassembler]) )
if test x"$with_id_disassem" == "xyes" ; then

    echo "outputting serial ids of compartments in the disassembler"

    AC_DEFINE(USE_ID_DISASSEM, 1, [outputting serial ids of compartments in the disassembler])

else

    echo "not outputting serial ids of compartments in the disassembler"

    AC_DEFINE(USE_ID_DISASSEM, 0, [not outputting serial ids of compartments in the disassembler])

fi

# integrators: integrate with model-container of neurospaces ?

AC_ARG_ENABLE(neurospaces, AS_HELP_STRING([--without-neurospaces   don't use neurospaces as modeling component]) )

HECCER_INTEGRATORS=

if test x"$with_neurospaces" == "xno" ; then

    echo "NOT using Neurospaces as modeling component"

else

    echo "Using Neurospaces as modeling component"

    AC_DEFINE(HECCER_SOURCE_NEUROSPACES, 1, [use neurospaces as modeling component])

    HECCER_INTEGRATORS="integrators"
fi

AC_SUBST(HECCER_INTEGRATORS)

# enable source typing to compute aggregate currents ?

AC_ARG_ENABLE(source-typing, AS_HELP_STRING([--without-source-typing   don't use model source typing for calculation of aggregate currents]) )

if test x"$with_source_typing" == "xno" ; then

    echo "NOT using source typing"

else

    echo "Using source typing"

    AC_DEFINE(HECCER_SOURCE_TYPING, 1, [use model source typing])
fi

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([float.h limits.h locale.h stdlib.h string.h])

# see for example http://www.nabble.com/AC_CHECK_HEADER-%2B-extra-compiler-flags-td10318845.html#a10319498

SAVE_CPPFLAGS=$CPPFLAGS
CPPFLAGS="-I/usr/local/neurospaces/instrumentor -DPRE_PROTO_TRAVERSAL"

AC_CHECK_HEADERS([neurospaces/neurospaces.h],[],
[echo "Error: neurospaces headers are not installed in standard location."])

CPPFLAGS=$SAVE_CPPFLAGS

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST

# Checks for library functions.
AC_CHECK_FUNCS([localeconv strchr])


dnl This does macro substitutions for certain operating systems and 
dnl architectures 
AC_MSG_CHECKING([OS specifics...])
AC_MSG_RESULT([Host is running $host_os.])
dnl {{{
case "$host_os" in
  darwin*)
    #
    # These are settings specific to MAC OS X.
    #
    dnl {{{{
    AC_MSG_CHECKING([Using libtool for MAC OS X.])
    AR=libtool
    ARFLAGS='-static -c -o'
    AC_SUBST(AR)
    AC_SUBST(ARFLAGS)
    AC_MSG_RESULT([$AR $ARFLAGS])

    dnl On the MAC we will only look for perl in the standard location for the Apple
    dnl native perl. 
    AC_CHECK_PROG(PERL, perl, NULL, [/usr/bin/perl],[/usr/local/bin/perl /opt/local/bin/perl])
    AC_SUBST(PERL)

    AC_MSG_CHECKING([Checking the perl installation])
    case $PERL in
      NULL*)
        echo ""
        echo "Error, the standard version of perl for Mac OSX is not found."
        echo "Non standard versions of perl are known to cause problems."
        AC_ERROR([Perl for Mac OSX is not found.])
        ;;
      *)
        AC_MSG_RESULT([ $PERL ])
        ;;
    esac

    # determine linker flags for perl embedding

    PERL_CCOPTS=`$PERL -MExtUtils::Embed -e ccopts | $PERL -pe 's/\-arch\s\S+\s//g'`
    AC_SUBST(PERL_CCOPTS)

    AC_CHECK_PROG(SWIG, swig, NULL, [/usr/bin/swig],[/usr/local/bin/swig /opt/local/bin/swig])
    AC_SUBST(SWIG)

    AC_MSG_CHECKING([Checking for swig])
    case $SWIG in
      NULL*)
        echo ""
        echo "Error, the standard version of swig for Mac OSX is not found."
        echo "Non standard versions of swig are known to cause problems."
        AC_ERROR([Swig for Mac OSX is not found.])
        ;;
      *)
        AC_MSG_RESULT([ $SWIG ])
        ;;
    esac

    PERLLIB_EXTENSION='dylib'
    AC_SUBST(PERLLIB_EXTENSION)

    SWIGCOMPILELINKSFORPERL='-I/usr/local/neurospaces/instrumentor 	-I$(srcdir)/../../.. 	-I$(top_builddir) 	-ffloat-store 	-I../../.. 	-include heccer/config.h 	-g 	-O0 	-dynamic 	-fPIC 	$(PERL_CCOPTS)'
    AC_SUBST(SWIGCOMPILELINKSFORPERL)

    SWIGCOMPILECOMMAND_PERL='gcc         $(SWIGCOMPILELINKSFORPERL)         -c swiggable_heccer_wrap.c'
    AC_SUBST(SWIGCOMPILECOMMAND_PERL)

 

    SWIGLDLINKSFORPERL='-L../../.. -lheccer -L../../../integrators -lhneurospaces -L/usr/local/lib/model-container -lneurospacesread -L/usr/local/neurospaces/instrumentor/hierarchy/output/symbols/ 	-lsymbol_algorithms 	-lncurses -lreadline -bundle -undefined suppress -flat_namespace'
    AC_SUBST(SWIGLDLINKSFORPERL)


    case "$host_os" in
	*darwin10.2.0 | *darwin10.3.0 | *darwin10.4.0)

	    dnl This is snow leopard
            SWIGLINKCOMMAND_PERL='ld 	$(SWIGLDLINKSFORPERL) 	-o SwiggableHeccer.$(PERLLIB_EXTENSION) /usr/lib/bundle1.o  swiggable_heccer_wrap.o'
            AC_SUBST(SWIGLINKCOMMAND_PERL)


	;;    
	*)
            SWIGLINKCOMMAND_PERL='ld 	$(SWIGLDLINKSFORPERL) 	-o SwiggableHeccer.$(PERLLIB_EXTENSION) 	swiggable_heccer_wrap.o'
            AC_SUBST(SWIGLINKCOMMAND_PERL)
	;;
    esac 





    PYTHONLIB_EXTENSION='so'
    AC_SUBST(PYHONLIB_EXTENSION)

    SWIGCOMPILELINKSFORPYTHON='-I$(PYTHON_INCLUDE) -I/usr/local/neurospaces/instrumentor -I./../../.. 	-I.../../../hierarchy/output/symbols 	-I./../../../hierarchy/output/symbols/'
    AC_SUBST(SWIGCOMPILELINKSFORPYTHON)

    SWIGCOMPILECOMMAND_PYTHON='gcc $(SWIGCOMPILELINKSFORPYTHON) -c swiggable_heccer_wrap.c'
    AC_SUBST(SWIGCOMPILECOMMAND_PYTHON)

    SWIGLDLINKSFORPYTHON='$(PYTHON_LDFLAGS) -L../../../ -lheccer -L../../../integrators -lhneurospaces  -L/usr/local/lib/model-container -lneurospacesread -L/usr/local/lib/neurospaces/algorithms/symbol -lsymbol_algorithms -lncurses -lreadline -framework Python -flat_namespace -undefined suppress -bundle 	-bundle_loader $(PYTHON_EXE)'
    AC_SUBST(SWIGLDLINKSFORPYTHON)


    case "$host_os" in
	*darwin10.2.0 | *darwin10.3.0 | *darwin10.4.0)

	    dnl This is snow leopard

            SWIGLINKCOMMAND_PYTHON='ld 	$(SWIGLDLINKSFORPYTHON) -o _SwiggableHeccer.$(PYTHONLIB_EXTENSION) /usr/lib/bundle1.o swiggable_heccer_wrap.o'
            AC_SUBST(SWIGLINKCOMMAND_PYTHON)

	;;

	*)
            SWIGLINKCOMMAND_PYTHON='ld 	$(SWIGLDLINKSFORPYTHON) -o _SwiggableHeccer.$(PYTHONLIB_EXTENSION)  swiggable_heccer_wrap.o'
            AC_SUBST(SWIGLINKCOMMAND_PYTHON)	
        ;;
    esac 


    AC_MSG_RESULT([done.])
    dnl }}} end MAC OS X settings
    ;;




  *)
  
    dnl {{{
    AR='ar'
    ARFLAGS='cru'
    AC_SUBST(AR)
    AC_SUBST(ARFLAGS)
    AC_MSG_CHECKING([ranlib invocation ])
    AC_MSG_RESULT([$AR $ARFLAGS])

    dnl Check for some needed programs.
    AC_CHECK_PROGS(PERL, perl5 perl)
    AC_SUBST(PERL)

    AC_CHECK_PROGS(SWIG, swig)
    AC_SUBST(SWIG)


    PERL_CCOPTS=`$PERL -MExtUtils::Embed -e ccopts`
    AC_SUBST(PERL_CCOPTS)

    PERLLIB_EXTENSION='so'
    AC_SUBST(PERLLIB_EXTENSION)


    SWIGCOMPILELINKSFORPERL='-I/usr/local/neurospaces/instrumentor -I$(srcdir)/../../.. -I$(top_builddir) -ffloat-store -I../../.. -include heccer/config.h -g -O0 -fPIC $(PERL_CCOPTS)'
    AC_SUBST(SWIGCOMPILELINKSFORPERL)

    SWIGCOMPILECOMMAND_PERL='gcc $(SWIGCOMPILELINKSFORPERL) -c swiggable_heccer_wrap.c'
    AC_SUBST(SWIGCOMPILECOMMAND_PERL)


    SWIGLDLINKSFORPERL='-g -shared swiggable_heccer_wrap.o -L../../.. -lheccer -L../../../integrators -lhneurospaces -L/usr/local/lib/model-container -lneurospacesread -L/usr/local/lib/neurospaces/algorithms/symbol -lsymbol_algorithms -lncurses -lreadline -lhistory -fPIC'
    AC_SUBST(SWIGLDLINKSFORPERL)

    SWIGLINKCOMMAND_PERL='gcc $(SWIGLDLINKSFORPERL) -o SwiggableHeccer.$(PERLLIB_EXTENSION)'
    AC_SUBST(SWIGLINKCOMMAND_PERL)


    PYTHONLIB_EXTENSION='so'
    AC_SUBST(PYTHONLIB_EXTENSION)

    SWIGCOMPILELINKSFORPYTHON='-g -DPRE_PROTO_TRAVERSAL $(PYTHON_INCLUDE) -I/usr/local/neurospaces/instrumentor -I$(builddir)../../.. -I$(srcdir)/../../.. -I$(builddir)../../../hierarchy/output/symbols -I$(srcdir)/../../../hierarchy/output/symbols/ -fPIC -Xlinker -export-dynamic'
    AC_SUBST(SWIGCOMPILELINKSFORPYTHON)

   SWIGCOMPILECOMMAND_PYTHON='gcc $(SWIGCOMPILELINKSFORPYTHON) -c swiggable_heccer_wrap.c'
   AC_SUBST(SWIGCOMPILECOMMAND_PYTHON)

    SWIGLDLINKSFORPYTHON='-L../../.. -lheccer -L../../../integrators -lhneurospaces -L/usr/local/lib/model-container -lneurospacesread -L/usr/local/lib/neurospaces/algorithms/symbol -lsymbol_algorithms -lncurses -lreadline -lhistory -fPIC -Xlinker -export-dynamic $(PYTHON_LDFLAGS)'
    AC_SUBST(SWIGLDLINKSFORPYTHON)

    SWIGLINKCOMMAND_PYTHON='gcc -shared swiggable_heccer_wrap.o $(SWIGLDLINKSFORPYTHON) -o _SwiggableHeccer.$(PYTHONLIB_EXTENSION)'
    AC_SUBST(SWIGLINKCOMMAND_PYTHON)
    dnl }}} End of General Settings

  ;;
esac
dnl }}}



# determine the test library to install

TEST_SPECIFICATION_FILES=`/bin/echo -n "tests/introduction.html " && find tests/specifications -name "*.t" | perl -pe 's/\n/ /g' && find tests/specifications/strings -name "*.txt" | perl -pe 's/\n/ /g' && find tests/data -name "*.yml" | perl -pe 's/\n/ /g'`
AC_SUBST(TEST_SPECIFICATION_FILES)


AC_CONFIG_FILES([Makefile
                 glue/Makefile
                 glue/swig/perl/Makefile
                 glue/swig/python/Makefile
                 integrators/Makefile
                 tests/Makefile
                 tests/code/Makefile
                 tests/genesis/Makefile
		 tests/glue/Makefile])
AC_OUTPUT

